--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
       </ul>
     </nav>
   </header>
+
+  <main class="grid-container">
+    <section class="image-span-2">
+      <img src="assets/images/image-web-3-desktop.jpg" alt="Squares and cylinders. Multi color">
+    </section>
+  </main>
 </div>
 
   <div class="attribution">
