--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
 
   <main class="grid-container">
     <section class="image-span-2">
-      <img src="assets/images/image-web-3-desktop.jpg" height="242.79" widt alt="Squares and cylinders. Multi color">
+      <img src="assets/images/image-web-3-desktop.jpg" alt="Squares and cylinders. Multi color">
+    </section>
+
+    <section class="new-section">
+      <h1>New</h1>
     </section>
   </main>
 </div>
