New section in progress

--- a/index.html
+++ b/index.html
@@ -14,30 +14,44 @@
 </head>
 
 <body>
-<div class="container">
-  <header>
-    <img src="assets/images/logo.svg" alt="The logo for W.">
-    <nav>
-      <ul>
-        <li>Home</li>
-        <li>New</li>
-        <li>Popular</li>
-        <li>Trending</li>
-        <li>Categories</li>
-      </ul>
-    </nav>
-  </header>
+  <div class="container">
+    <header>
+      <img src="assets/images/logo.svg" alt="The logo for W.">
+      <nav>
+        <ul>
+          <li>Home</li>
+          <li>New</li>
+          <li>Popular</li>
+          <li>Trending</li>
+          <li>Categories</li>
+        </ul>
+      </nav>
+    </header>
 
-  <main class="grid-container">
-    <section class="image-span-2">
-      <img src="assets/images/image-web-3-desktop.jpg" alt="Squares and cylinders. Multi color">
-    </section>
+    <main class="grid-container">
+      <section class="image-span-2">
+        <img src="assets/images/image-web-3-desktop.jpg" alt="Squares and cylinders. Multi color">
+      </section>
 
-    <section class="new-section">
-      <h1>New</h1>
-    </section>
-  </main>
-</div>
+      <section class="new-section">
+        <h1>New</h1>
+        <div class="new-1 new-width">
+          <h3>Hydrogen VS Electric Cars</h3>
+          <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+        </div>
+        <hr>
+        <div class="new-2 new-width">
+          <h3>The Downsides of AI Artistry</h3>
+          <p>What are the possible adverse effects of on-demand AI image generation?</p>
+        </div>
+        <hr>
+        <div class="new-3 new-width">
+          <h3>Is VC Funding Drying Up?</h3>
+          <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+        </div>
+      </section>
+    </main>
+  </div>
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
@@ -64,12 +78,11 @@
   Hydrogen VS Electric Cars
   Will hydrogen-fueled cars ever catch up to EVs?
 
-  The Downsides of AI Artistry
-  What are the possible adverse effects of on-demand AI image generation?
+  
 
-  Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.
 
+
+  
   01
   Reviving Retro PCs
   What happens when old PCs are given modern upgrades?
