Add new content

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
           <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
         </div>
       </section>
+
+      <section class="bright-picture">
+        <h1>The Bright Future of Web 3.0?</h1>
+      </section>
     </main>
   </div>
 
