--- a/index.html
+++ b/index.html
@@ -12,54 +12,26 @@
   <link rel="stylesheet" href="style.css">
 
 </head>
-
 <body>
   <div class="container">
     <header>
-      <img src="assets/images/logo.svg" alt="The logo for W.">
+      <img src="assets/images/logo.svg" alt="A W with a . next it">
       <nav>
         <ul>
-          <li>Home</li>
-          <li>New</li>
-          <li>Popular</li>
-          <li>Trending</li>
-          <li>Categories</li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">New</a></li>
+          <li><a href="#">Popular</a></li>
+          <li><a href="#">Trending</a></li>
+          <li><a href="#">Categories</a></li>
         </ul>
       </nav>
     </header>
 
-    <main class="grid-container">
-      <section class="image-span-2">
-        <img src="assets/images/image-web-3-desktop.jpg" alt="Squares and cylinders. Multi color">
-      </section>
-
-      <section class="new-section">
-        <h1>New</h1>
-        <div class="new-1 new-width">
-          <h3>Hydrogen VS Electric Cars</h3>
-          <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
-        </div>
-        <hr>
-        <div class="new-2 new-width">
-          <h3>The Downsides of AI Artistry</h3>
-          <p>What are the possible adverse effects of on-demand AI image generation?</p>
-        </div>
-        <hr>
-        <div class="new-3 new-width">
-          <h3>Is VC Funding Drying Up?</h3>
-          <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
-        </div>
-      </section>
-
-      <section class="bright-picture">
-        <h1>The Bright Future of Web 3.0?</h1>
+    <main>
+      <section class="main-img">
+        <img src="assets/images/image-web-3-desktop.jpg" alt="Multi colored different shapes, these include: Reds, Blues, Oranges. For the shapes: Cylinders, Squares, Triangles">
       </section>
     </main>
-  </div>
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
 
