Start work on new section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 
 </head>
 <body>
+  <!--Container for the entire visible contnet within this website(Excludes the atttribution, this can be found just the content that I will bbe placing on this website)-->
   <div class="container">
+
+    <!--Container for the header includes the navigation bar and logo-->
     <header>
       <img src="assets/images/logo.svg" alt="A W with a . next it">
       <nav>
@@ -30,6 +33,15 @@
     <main>
       <section class="main-img">
         <img src="assets/images/image-web-3-desktop.jpg" alt="Multi colored different shapes, these include: Reds, Blues, Oranges. For the shapes: Cylinders, Squares, Triangles">
+      </section>
+
+      <section class="new-section">
+        <div class="new-content-container">
+          <h1>New</h1>
+            <h4>Hydrogen VS Electric Cars</h4>
+            <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+            <hr>
+          </div>
       </section>
     </main>
   </div>
