--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="style.css">
 
 </head>
+
 <body>
   <!--Container for the entire visible contnet within this website(Excludes the atttribution, this can be found just the content that I will bbe placing on this website)-->
   <div class="container">
@@ -32,17 +33,38 @@
 
     <main>
       <section class="main-img">
-        <img src="assets/images/image-web-3-desktop.jpg" alt="Multi colored different shapes, these include: Reds, Blues, Oranges. For the shapes: Cylinders, Squares, Triangles">
+        <img src="assets/images/image-web-3-desktop.jpg"
+          alt="Multi colored different shapes, these include: Reds, Blues, Oranges. For the shapes: Cylinders, Squares, Triangles">
       </section>
 
       <section class="new-section">
         <div class="new-content-container">
           <h1>New</h1>
-            <h4>Hydrogen VS Electric Cars</h4>
-            <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
-            <hr>
-          </div>
+          <h4>Hydrogen VS Electric Cars</h4>
+          <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+          <hr>
+          <h4>The Downsides of AI Artistry</h4>
+          <p>What are the possible adverse effects of on-demand AI image generation?</p>
+          <hr>
+          <h4>Is VC Funding Drying Up?</h4>
+          <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+        </div>
       </section>
+
+      <section class="main-article">
+        <div class="main-article-heading">
+          <h1>The Bright Future of Web 3.0?</h1>
+        </div>
+        <div class="main-article-info">
+          <p> We dive into the next evolution of the web that claims to put the power of the platforms back into the
+            hands of the people.
+            But is it really fulfilling its promise?</p>
+            <div class="red-rectangle">
+              <h5>READ MORE</h5>
+            </div>
+        </div>
+      </section>
+
     </main>
   </div>
 </body>
@@ -56,8 +78,7 @@
 
   The Bright Future of Web 3.0?
 
-  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-  But is it really fulfilling its promise?
+ 
 
   Read more
 
