Working on squashing grid bugs

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <main>
       <section class="main-img">
         <img src="assets/images/image-web-3-desktop.jpg"
-          alt="Multi colored different shapes, these include: Reds, Blues, Oranges. For the shapes: Cylinders, Squares, Triangles">
+          alt="Multi colored different shapes, these include: Reds, Blues, Oranges. For the shapes: Cylinders, Squares, Triangles" height="100%" width="100%" loading="lazy">
       </section>
 
       <section class="new-section">
