--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       <section class="main-article">
         <div class="main-article-heading">
-          <h1>The Bright Future of Web 3.0?</h1>
+          <h1>The Bright<br> Future of<br> Web 3.0?</h1>
         </div>
         <div class="main-article-info">
           <p> We dive into the next evolution of the web that claims to put the power of the platforms back into the
@@ -63,6 +63,10 @@
               <h5>READ MORE</h5>
             </div>
         </div>
+      </section>
+
+      <section class="numbered-articles">
+
       </section>
 
     </main>
