--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     <main>
       <section class="main-img">
         <img src="assets/images/image-web-3-desktop.jpg"
-          alt="Multi colored different shapes, these include: Reds, Blues, Oranges. For the shapes: Cylinders, Squares, Triangles" height="100%" width="100%" loading="lazy">
+          alt="Multi colored different shapes, these include: Reds, Blues, Oranges. For the shapes: Cylinders, Squares, Triangles"
+          height="100%" width="100%" loading="lazy">
       </section>
 
       <section class="new-section">
@@ -59,14 +60,22 @@
           <p> We dive into the next evolution of the web that claims to put the power of the platforms back into the
             hands of the people.
             But is it really fulfilling its promise?</p>
-            <div class="red-rectangle">
-              <h5>READ MORE</h5>
-            </div>
+          <div class="red-rectangle">
+            <h5>READ MORE</h5>
+          </div>
         </div>
       </section>
 
       <section class="numbered-articles">
+        <div class="article-sizing">
+          <img src="assets/images/image-retro-pcs.jpg" alt="A retro computer on a purplish background">
+        </div>
+        <div class="article-sizing">
 
+        </div>
+        <div class="article-sizing">
+
+        </div>
       </section>
 
     </main>
